# Slome_FGD_C

./: CMakeLists.txt  README.md
src/: library.c  library.h  libslome.c  main.c  tokenizer.c  tokenizer.h
src/include/: enums.h  libslome.h
